--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node_modules/.bin/webpack",
     "clean": "rm -rf dist/*",
-    "build": "node_modules/.bin/babel src -d lib",
     "watch": "webpack --watch",
-    "webpack": "node_modules/.bin/webpack"
+    "webpack": "node_modules/.bin/webpack",
+    "start": "node_modules/.bin/webpack-dev-server --entry ./src/index.js --output-filrname ./dist/drawit.js --content-base ./samples/"
   },
   "repository": {
     "type": "git",
@@ -31,7 +32,8 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3"
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
     "d3-fetch": "^1.1.0"
