--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "grahp"
   ],
   "author": "Chamath Sandaru",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/codezilla2018/DrawIt/issues"
   },
